--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,9 @@
 body {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+
 
     background-color: hsl(185, 75%, 39%);
     background-image: url("./images/bg-pattern-top.svg"), url("./images/bg-pattern-bottom.svg");
@@ -28,8 +31,6 @@ body {
     height: 100%;
     flex-direction: column;
     font-family: "Kumbh Sans", sans-serif;
-
-    
 }
 
 .card-top {
@@ -43,7 +44,7 @@ body {
     align-items: center;
     justify-items: center;
     align-self: center;
-    border-bottom: 1px solid hsl(0, 0%, 59%);
+    border-bottom: 1px solid hsla(0, 0%, 59%, 0.301);
     margin-top: 150px;
 }
 
@@ -56,12 +57,14 @@ body {
 
 .name {
     font-weight: bold;
-    padding-top: 20px;
+    padding-top: 30px;
     line-height: 10px;
+    color: hsl(229, 23%, 23%);
 }
 
 .card-top span {
     font-weight: normal;
+    color: hsl(227, 10%, 46%);
 }
 
 .card-top p {
@@ -80,26 +83,27 @@ body {
     justify-content: center;
     align-self: center;
     margin-bottom: 150px;
-    
     margin-top: 0px;
-
 }
 
 .numbers {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    
     text-align: center;
     list-style: none;
-    
+    padding:  0px;
+    margin: 10px 0px;
 }
 
 .socials {
-    padding: 10px;  
+    justify-content: space-between;
+    padding: 20px;
 }
 
 .socials-stats {
     font-weight: bold;
+    color: hsl(229, 23%, 23%);
 }
 
 .socials-label {
@@ -107,7 +111,6 @@ body {
     padding-top: 5px;
     letter-spacing: 2px;
 }
-
 
 
 .attribution {
